// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`denyImports > files / denied by exact match [client] 1`] = `
[Error: [vite-env-only] Import denied
 - Denied by file pattern: lib/deny-me.js
 - Importer: lib/main.js
 - Import: "./deny-me"
 - Resolved: lib/deny-me.js
 - Environment: client]
`;

exports[`denyImports > files / denied by exact match [server] 1`] = `
[Error: [vite-env-only] Import denied
 - Denied by file pattern: lib/deny-me.js
 - Importer: lib/main.js
 - Import: "./deny-me"
 - Resolved: lib/deny-me.js
 - Environment: server]
`;

exports[`denyImports > files / denied by glob [client] 1`] = `
[Error: [vite-env-only] Import denied
 - Denied by file pattern: **/deny-me.*
 - Importer: lib/main.js
 - Import: "./deny-me"
 - Resolved: lib/deny-me.js
 - Environment: client]
`;

exports[`denyImports > files / denied by glob [server] 1`] = `
[Error: [vite-env-only] Import denied
 - Denied by file pattern: **/deny-me.*
 - Importer: lib/main.js
 - Import: "./deny-me"
 - Resolved: lib/deny-me.js
 - Environment: server]
`;

exports[`denyImports > files / denied by regex [client] 1`] = `
[Error: [vite-env-only] Import denied
 - Denied by file pattern: /^lib\\/deny-me\\.js$/
 - Importer: lib/main.js
 - Import: "./deny-me"
 - Resolved: lib/deny-me.js
 - Environment: client]
`;

exports[`denyImports > files / denied by regex [server] 1`] = `
[Error: [vite-env-only] Import denied
 - Denied by file pattern: /^lib\\/deny-me\\.js$/
 - Importer: lib/main.js
 - Import: "./deny-me"
 - Resolved: lib/deny-me.js
 - Environment: server]
`;

exports[`denyImports > specifiers / denied by exact match [client] 1`] = `
[Error: [vite-env-only] Import denied
 - Denied by specifier pattern: ./deny-me
 - Importer: lib/main.js
 - Import: "./deny-me"
 - Environment: client]
`;

exports[`denyImports > specifiers / denied by exact match [server] 1`] = `
[Error: [vite-env-only] Import denied
 - Denied by specifier pattern: ./deny-me
 - Importer: lib/main.js
 - Import: "./deny-me"
 - Environment: server]
`;

exports[`denyImports > specifiers / denied by regex [client] 1`] = `
[Error: [vite-env-only] Import denied
 - Denied by specifier pattern: /^\\.\\/deny-me$/
 - Importer: lib/main.js
 - Import: "./deny-me"
 - Environment: client]
`;

exports[`denyImports > specifiers / denied by regex [server] 1`] = `
[Error: [vite-env-only] Import denied
 - Denied by specifier pattern: /^\\.\\/deny-me$/
 - Importer: lib/main.js
 - Import: "./deny-me"
 - Environment: server]
`;
